z-index fix

--- a/components/modal/Modal.scss
+++ b/components/modal/Modal.scss
@@ -2,7 +2,7 @@
   font-family: "Open Sans", arial, sans-serif;
   display: block;
   position: fixed;
-  z-index: 666;
+  z-index: 99999;
   left: 0;
   top: 0;
   height: 100%;
